test/data/resolver/valid/call_yield_mixed_return.cypher
MATCH (p:Person) CALL test.labels() YIELD label
RETURN p.name, label
