test/data/resolver/invalid/part_binding_type_conflict_call_vs_node.cypher
CALL test.labels() YIELD label
WITH label
MATCH (label:Person) RETURN label
